--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,35 +14,36 @@ jobs:
       contents: read
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'temurin'
+      - uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
 
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582
 
-    - name: Grant execute permission for Gradle Wrapper
-      run: chmod +x gradlew
+      - name: Grant execute permission for Gradle Wrapper
+        run: chmod +x gradlew
+        working-directory: RecipeNotebook/gradlew
 
-    - name: Build with Gradle Wrapper
-      run: ./gradlew build
+      - name: Build with Gradle Wrapper
+        run: ./gradlew build
 
-    - name: Test with Gradle Wrapper
-      run: ./gradlew test --info
+      - name: Test with Gradle Wrapper
+        run: ./gradlew test --info
 
-    - name: Upload test results
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: test-results
-        path: build/reports/tests/test/
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: test-results
+          path: build/reports/tests/test/
 
-    - name: Upload test logs
-      uses: actions/upload-artifact@v4
-      if: failure()
-      with:
-        name: test-logs
-        path: build/test-results/test/
+      - name: Upload test logs
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: test-logs
+          path: build/test-results/test/
