--- a/RecipeNotebook/src/main/resources/application.properties
+++ b/RecipeNotebook/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=RecipeNotebook
 # DB
-spring.datasource.url=jdbc:mysql://localhost:3307/StudentManagement
+spring.datasource.url=jdbc:mysql://localhost:3307/RecipeNotebook
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
