--- a/RecipeNotebook/src/main/resources/application.properties
+++ b/RecipeNotebook/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Mybatis
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath*:/mapper/*.xml
+# FrontEnd
+spring.mvc.view.prefix=/static/
+spring.mvc.view.suffix=.html
