--- a/RecipeNotebook/src/main/resources/application.properties
+++ b/RecipeNotebook/src/main/resources/application.properties
@@ -10,3 +10,5 @@ mybatis.mapper-locations=classpath*:/mapper/*.xml
 # FrontEnd
 spring.mvc.view.prefix=/static/
 spring.mvc.view.suffix=.html
+# ??????????
+app.upload.dir=${user.home}/recipe-notebook/uploads/
