--- a/RecipeNotebook/src/main/resources/application-ci.properties
+++ b/RecipeNotebook/src/main/resources/application-ci.properties
@@ -11,4 +11,4 @@ mybatis.mapper-locations=classpath*:/mapper/*.xml
 spring.mvc.view.prefix=/static/
 spring.mvc.view.suffix=.html
 # upload
-app.upload.dir=${user.home}/recipe-notebook/uploads/
+app.upload.dir=${GITHUB_WORKSPACE}/uploads
