--- a/RecipeNotebook/src/main/resources/application.properties
+++ b/RecipeNotebook/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=RecipeNotebook
+spring.profiles.active=ci
 # DB
 spring.datasource.url=jdbc:mysql://localhost:3307/RecipeNotebook
 spring.datasource.username=user
