--- a/RecipeNotebook/src/main/resources/application-ci.properties
+++ b/RecipeNotebook/src/main/resources/application-ci.properties
@@ -1,6 +1,6 @@
 spring.application.name=RecipeNotebook
-spring.profiles.active=default
-app.feature.someClassEnabled=true
+spring.profiles.active=ci
+app.feature.someClassEnabled=false
 # DB
 spring.datasource.url=jdbc:mysql://localhost:3307/RecipeNotebook
 spring.datasource.username=user
@@ -12,5 +12,3 @@ mybatis.mapper-locations=classpath*:/mapper/*.xml
 # FrontEnd
 spring.mvc.view.prefix=/static/
 spring.mvc.view.suffix=.html
-# upload
-app.upload.dir=${user.home}/recipe-notebook/uploads/
