--- a/RecipeNotebook/build.gradle
+++ b/RecipeNotebook/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     // .envファイルの使用
     implementation 'me.paulschwarz:spring-dotenv:3.0.0'
+    // Base64デコード
+    implementation 'commons-codec:commons-codec:1.15'
     // SpringBoot Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
