--- a/RecipeNotebook/src/main/resources/application-ci.properties
+++ b/RecipeNotebook/src/main/resources/application-ci.properties
@@ -10,5 +10,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath*:/mapper/*.xml
 # FrontEnd
-spring.mvc.view.prefix=/static/
-spring.mvc.view.suffix=.html
+spring.web.resources.static-locations=classpath:/static/
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.web.resources.chain.cache=false
+spring.thymeleaf.cache=false
