--- a/RecipeNotebook/src/test/resources/application-ci.properties
+++ b/RecipeNotebook/src/test/resources/application-ci.properties
@@ -1,4 +1,6 @@
 spring.application.name=RecipeNotebook
+spring.profiles.active=ci
+app.feature.someClassEnabled=false
 # DB
 spring.sql.init.mode=always
 spring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL
