--- a/RecipeNotebook/src/test/resources/application.properties
+++ b/RecipeNotebook/src/test/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=RecipeNotebook
+spring.profiles.active=default
+app.feature.someClassEnabled=true
 # DB
 spring.sql.init.mode=always
 spring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL
@@ -9,3 +11,5 @@ spring.h2.console.enabled=true
 # Mybatis
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath*:/mapper/*.xml
+# upload
+app.upload.dir=${user.home}/recipe-notebook/test-uploads/
