ゲストログイン機能の追加

--- a/RecipeNotebook/src/main/resources/application-ci.properties
+++ b/RecipeNotebook/src/main/resources/application-ci.properties
@@ -12,3 +12,6 @@ mybatis.mapper-locations=classpath*:/mapper/*.xml
 # FrontEnd
 spring.web.resources.static-locations=classpath:/static/
 spring.web.resources.chain.cache=false
+# GuestLogin
+guest.username=user
+guest.password=user_password
