--- a/RecipeNotebook/src/main/resources/application.properties
+++ b/RecipeNotebook/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.web.resources.static-locations=classpath:/static/
 spring.web.resources.chain.cache=false
 # upload
 app.upload.dir=${user.home}/recipe-notebook/uploads/
+# GuestLogin
+guest.username=user
+guest.password=user_password
