--- a/RecipeNotebook/src/test/resources/application-ci.properties
+++ b/RecipeNotebook/src/test/resources/application-ci.properties
@@ -11,3 +11,6 @@ spring.h2.console.enabled=true
 # Mybatis
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath*:/mapper/*.xml
+# GuestLogin
+guest.username=user
+guest.password=user_password
