--- a/RecipeNotebook/src/test/resources/application.properties
+++ b/RecipeNotebook/src/test/resources/application.properties
@@ -13,3 +13,6 @@ mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath*:/mapper/*.xml
 # upload
 app.upload.dir=${user.home}/recipe-notebook/test-uploads/
+# GuestLogin
+guest.username=user
+guest.password=user_password
