--- a/RecipeNotebook/src/main/resources/application-ci.properties
+++ b/RecipeNotebook/src/main/resources/application-ci.properties
@@ -1,17 +1,17 @@
-spring.application.name=RecipeNotebook
-spring.profiles.active=ci
-app.feature.someClassEnabled=false
-# DB
-spring.datasource.url=jdbc:mysql://localhost:3307/RecipeNotebook
-spring.datasource.username=user
-spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# Mybatis
-mybatis.configuration.map-underscore-to-camel-case=true
-mybatis.mapper-locations=classpath*:/mapper/*.xml
-# FrontEnd
-spring.web.resources.static-locations=classpath:/static/
-spring.web.resources.chain.cache=false
-# GuestLogin
-guest.username=user
-guest.password=user_password
+#spring.application.name=RecipeNotebook
+#spring.profiles.active=ci
+#app.feature.someClassEnabled=false
+## DB
+#spring.datasource.url=jdbc:mysql://localhost:3307/RecipeNotebook
+#spring.datasource.username=user
+#spring.datasource.password=password
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+## Mybatis
+#mybatis.configuration.map-underscore-to-camel-case=true
+#mybatis.mapper-locations=classpath*:/mapper/*.xml
+## FrontEnd
+#spring.web.resources.static-locations=classpath:/static/
+#spring.web.resources.chain.cache=false
+## GuestLogin
+#guest.username=user
+#guest.password=user_password
