--- a/RecipeNotebook/src/main/resources/application.properties
+++ b/RecipeNotebook/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=RecipeNotebook
 spring.profiles.active=default
-app.feature.someClassEnabled=true
+#app.feature.someClassEnabled=true
 # DB
 spring.datasource.url=jdbc:mysql://localhost:3307/RecipeNotebook
 spring.datasource.username=user
