--- a/RecipeNotebook/src/test/resources/application-ci.properties
+++ b/RecipeNotebook/src/test/resources/application-ci.properties
@@ -1,16 +1,16 @@
-spring.application.name=RecipeNotebook
-spring.profiles.active=ci
-app.feature.someClassEnabled=false
-# DB
-spring.sql.init.mode=always
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL
-spring.datasource.username=sa
-spring.datasource.password=sa
-spring.datasource.driver-class-name=org.h2.Driver
-spring.h2.console.enabled=true
-# Mybatis
-mybatis.configuration.map-underscore-to-camel-case=true
-mybatis.mapper-locations=classpath*:/mapper/*.xml
-# GuestLogin
-guest.username=user
-guest.password=user_password
+#spring.application.name=RecipeNotebook
+#spring.profiles.active=ci
+#app.feature.someClassEnabled=false
+## DB
+#spring.sql.init.mode=always
+#spring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL
+#spring.datasource.username=sa
+#spring.datasource.password=sa
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.h2.console.enabled=true
+## Mybatis
+#mybatis.configuration.map-underscore-to-camel-case=true
+#mybatis.mapper-locations=classpath*:/mapper/*.xml
+## GuestLogin
+#guest.username=user
+#guest.password=user_password
