--- a/RecipeNotebook/src/test/resources/application.properties
+++ b/RecipeNotebook/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=RecipeNotebook
 spring.profiles.active=default
-app.feature.someClassEnabled=true
+#app.feature.someClassEnabled=true
 # DB
 spring.sql.init.mode=always
 spring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL
