ymlファイルからCIプロファイルの記述削除

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,11 +29,11 @@ jobs:
         run: chmod +x RecipeNotebook/gradlew
 
       - name: Build with Gradle Wrapper
-        run: ./gradlew build -Dspring.profiles.active=ci
+        run: ./gradlew build
         working-directory: RecipeNotebook
 
       - name: Test with Gradle Wrapper
-        run: ./gradlew test --info -Dspring.profiles.active=ci
+        run: ./gradlew test --info
         working-directory: RecipeNotebook
 
       - name: Upload test results
