--- a/.github/workflows/Java_ci_with_gradle.yml
+++ b/.github/workflows/Java_ci_with_gradle.yml
@@ -63,10 +63,16 @@ jobs:
       - name: Generate OpenAPI HTML
         run: |
           wget https://repo1.maven.org/maven2/org/openapitools/openapi-generator-cli/7.10.0/openapi-generator-cli-7.10.0.jar -O openapi-generator-cli.jar
-          java -jar openapi-generator-cli.jar generate -i RecipeNotebook/openapi.json -g html -o RecipeNotebook/openapi-html
+          java -jar openapi-generator-cli.jar generate -i RecipeNotebook/openapi.json -g swagger-ui -o RecipeNotebook/openapi-docs
 
       - name: Upload OpenAPI HTML
         uses: actions/upload-artifact@v4
         with:
           name: openapi-html
           path: RecipeNotebook/openapi-html
+
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4.5.0
+        with:
+          folder: RecipeNotebook/openapi-docs
+          branch: gh-pages
