--- a/.github/workflows/Java_ci_with_gradle.yml
+++ b/.github/workflows/Java_ci_with_gradle.yml
@@ -13,6 +13,7 @@ jobs:
     timeout-minutes: 10
     permissions:
       contents: write
+      pages: write
 
     steps:
       - uses: actions/checkout@v4
@@ -63,13 +64,13 @@ jobs:
       - name: Generate OpenAPI HTML
         run: |
           wget https://repo1.maven.org/maven2/org/openapitools/openapi-generator-cli/7.10.0/openapi-generator-cli-7.10.0.jar -O openapi-generator-cli.jar
-          java -jar openapi-generator-cli.jar generate -i RecipeNotebook/openapi.json -g swagger-ui -o RecipeNotebook/openapi-docs
+          java -jar openapi-generator-cli.jar generate -i RecipeNotebook/openapi.json -g swagger-ui-single-page -o RecipeNotebook/openapi-docs
 
       - name: Upload OpenAPI HTML
         uses: actions/upload-artifact@v4
         with:
           name: openapi-html
-          path: RecipeNotebook/openapi-html
+          path: RecipeNotebook/openapi-docs
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4.5.0
