--- a/.github/workflows/Java_ci_with_gradle.yml
+++ b/.github/workflows/Java_ci_with_gradle.yml
@@ -14,6 +14,7 @@ jobs:
     permissions:
       contents: write
       pages: write
+      id-token: write
 
     steps:
       - uses: actions/checkout@v4
@@ -59,21 +60,27 @@ jobs:
         run: sleep 15
 
       - name: Download OpenAPI spec
-        run: curl -o RecipeNotebook/openapi.yaml http://localhost:8080/v3/api-docs.yaml
+        run: curl -o RecipeNotebook/openapi.json http://localhost:8080/v3/api-docs
 
       - name: Generate Swagger UI
         uses: Legion2/swagger-ui-action@v1
         with:
-          output: swagger-ui
-          spec-file: RecipeNotebook/openapi.yaml
+          output: RecipeNotebook/swagger-ui
+          spec-file: RecipeNotebook/openapi.json
+          options: |
+            configUrl: /swagger-ui-config.json
+            url: /openapi.json
 
       - name: Upload OpenAPI DOCS
         uses: actions/upload-artifact@v4
         with:
           name: openapi-docs
-          path: RecipeNotebook/openapi-docs
+          path: RecipeNotebook/swagger-ui
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
+        if: github.ref == 'refs/heads/main'
         with:
-          publish_dir: swagger-ui
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: RecipeNotebook/swagger-ui
+          force_orphan: true
