--- a/.github/workflows/Java_ci_with_gradle.yml
+++ b/.github/workflows/Java_ci_with_gradle.yml
@@ -25,7 +25,10 @@ jobs:
           distribution: 'temurin'
 
       - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582
+        uses: gradle/gradle-build-action@v2
+        with:
+          cache-read-only: false
+          gradle-home-cache-cleanup: true
 
       - name: Grant execute permission for Gradle Wrapper
         run: chmod +x RecipeNotebook/gradlew
@@ -67,10 +70,8 @@ jobs:
         with:
           output: RecipeNotebook/swagger-ui
           spec-file: RecipeNotebook/openapi.json
+          swagger-config-url: /swagger-ui-config.json
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          options: |
-            configUrl: /swagger-ui-config.json
-            url: /openapi.json
 
       - name: Upload OpenAPI DOCS
         uses: actions/upload-artifact@v4
