--- a/RecipeNotebook/src/main/resources/application.properties
+++ b/RecipeNotebook/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=RecipeNotebook
 spring.profiles.active=default
 # DB
-spring.datasource.url=jdbc:mysql://localhost:3307/RecipeNotebook
-spring.datasource.username=user
+spring.datasource.url=jdbc:mysql://recipenotebook-db.cdao28k80qxn.ap-northeast-1.rds.amazonaws.com:3306/RecipeNotebook
+spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Mybatis
