--- a/.github/workflows/Java_cd_with_gradle.yml
+++ b/.github/workflows/Java_cd_with_gradle.yml
@@ -1,10 +1,16 @@
-name: Java CI with Gradle
+name: Java CD with Gradle
 
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+
+env:
+  EC2_USER: 'ec2-user'
+  EC2_HOST: '3.112.42.163'
+  SRC_PATH: 'build/libs/*.jar'
+  DEST_PATH: '/home/ec2-user/RecipeManagement.jar'
 
 jobs:
   build-and-test:
@@ -34,7 +40,7 @@ jobs:
         run: chmod +x RecipeNotebook/gradlew
 
       - name: Build with Gradle Wrapper
-        run: ./gradlew build
+        run: ./gradlew bootJar
         working-directory: RecipeNotebook
 
       - name: Test with Gradle Wrapper
@@ -56,11 +62,16 @@ jobs:
           path: RecipeNotebook/build/test-results/test/
 
       - name: Run Spring Boot to serve API docs
-        run: ./gradlew bootRun &
+        run: java -jar $SRC_PATH &
         working-directory: RecipeNotebook
 
       - name: Wait for the application to start
-        run: sleep 15
+        run: |
+          for i in {1..15}; do
+            nc -z localhost 8080 && break
+            echo "Waiting for the application to start..."
+            sleep 2
+          done
 
       - name: Download OpenAPI spec
         run: curl -o RecipeNotebook/openapi.json http://localhost:8080/v3/api-docs
@@ -85,3 +96,47 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: RecipeNotebook/swagger-ui
           force_orphan: true
+
+      - name: SCP Copy Application to EC2
+        env:
+          PRIVATE_KEY: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
+        run: |
+          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+          scp -o StrictHostKeyChecking=no -i private_key $SRC_PATH $EC2_USER@$EC2_HOST:$DEST_PATH
+
+      - name: SSH Application Deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ env.EC2_HOST }}
+          username: ${{ env.EC2_USER }}
+          key: ${{ secrets.AWS_EC2_PRIVATE_KEY }}
+          envs: DEST_PATH
+          script: |
+            sudo yum update -y
+            if [ -f /etc/systemd/system/RecipeNotebook.service ]; then
+              echo "already exists Service File"
+            else
+            cat <<EOL | sudo tee -a /etc/systemd/system/RecipeNotebook.service
+            [Unit]
+            Description = RecipeNotebook App
+            
+            [Service]
+            ExecStart = java -jar ${DEST_PATH}
+            EnvironmentFile = /etc/sysconfig/RecipeNotebook
+            Restart = no
+            Type = simple
+            User = ec2-user
+            Group = ec2-user
+            SuccessExitStatus = 143
+            
+            [Install]
+            WantedBy = multi-user.target
+            EOL
+            fi
+            
+            sudo systemctl daemon-reload
+            if sudo systemctl status RecipeNotebook 2>&1 | grep "Active: active (running)" ; then
+              sudo systemctl restart RecipeNotebook
+            else
+              sudo systemctl start RecipeNotebook
+            fi
